fixed picture alignment

--- a/Simple-Grid/static/css/style.css
+++ b/Simple-Grid/static/css/style.css
@@ -19,6 +19,7 @@
     width: 170px;
     height: 170px;
     padding: 1em;
+    margin-top: -0.4em;
     margin-bottom: -1em;
     object-fit: cover;
 }
